# simple-particles

./: .gitignore  CMakeLists.txt  Makefile  generate_video.cc  generate_video.cpp  init_state.txt  main.cc  main.cpp
include/: 2f.h  3f.h  particle.h  particle.hh  world.h  world.hh
include/2f/: particle2f.h  structs.h  world2f.h
include/3f/: world3f.h
include/utils/: config.hh  parse_args.hh  save.hh
scripts/: generate_random_initial_state.py
src/: kernel.cl  main.cpp  world2f.cpp
visualize/: generate_video_2f.cpp  generate_video_3f.cpp
